# trk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
ansible/: mac.yml
content/: 2025-01-26.md  2025-01-27.md
public/: 2025-01-26.html  feed.xml  hello-world.html  index.html
src/: main.rs
templates/: index.html  post.html
