[package]
name = "trkw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = "0.12.2"
rss = "2.0"
tera = "1.19"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
notify = "8.0.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3"
